# programacaoAvancada

./: README.md
Trabalho1/: main.cpp  tec2Graficos.ipynb
Trabalho11/: CMakeLists.txt  Trab11gráficos.ipynb  Trabalho9_Legacy.h  gerar_graficos.py  gerar_graficos_colab.py  main.cpp  resultados_simulacao.csv
Trabalho2/: delaunay_performance.csv  trabalho2.ipynb  voronoy.cpp
Trabalho3/: Trabalho3Graficos.ipynb  envoltoria_performance.csv  funcoes.cpp  main.cpp  pontos_log.csv  programacaoAvancada.h
Trabalho4/: Trabalho4.ipynb  distancia_poligonos.csv  funcoes.cpp  main.cpp  minkowski_performance.csv  pontos_log.csv  programacaoAvancada.h
Trabalho5/: Trabalho5.ipynb  main.cpp  manual_performance_data.csv  performance_data.csv
Trabalho6/: Trabalho5_Legacy.h  main.cpp
Trabalho9/: CMakeLists.txt
Trabalho9/src/: GridManager.cpp  GridManager.h
Trabalho9/src/Adapters/: GridAdapter.h  HexagonalGridAdapter.h  LocationProvider.h  OrthogonalMovementAdapter.h  RectangularGridAdapter.h
Trabalho9/src/Behaviors/: AvoidObstacleDecorator.h  IdleBehavior.h
Trabalho9/src/ChainOfResponsibility/: BaseInitHandler.h  WindowInitHandler.h
Trabalho9/src/Collision/: CollisionObserver.h
Trabalho9/src/Commands/: BaseCommand.h  MoveCommand.h  SetObstacleCommand.h  SpawnAgentCommand.h
Trabalho9/src/Core/: Application.cpp  Application.h  GridType.h
Trabalho9/src/Factories/: GridFactory.h
Trabalho9/src/Interfaces/: IAppFactory.h  IGridFactory.h  IInitHandler.h
Trabalho9/src/Observer/: AgentEventLogger.h  AgentRespawnObserver.h  GameAgent.cpp  GameAgent.h  GameAgentManager.h
(+77 files in other folders)
